# overpass-syntax-checker

./: .cursorrules  .gitignore  CHANGELOG.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  README.md  analyze_all_queries.py  analyze_invalid_queries.py  categorize_remaining_errors.py  coverage.sh  example_usage.py  overpass_ql_syntax_checker.py  pyproject.toml  quality-fix.sh  quality.sh  setup.py  test.sh  test_area_ids.py  test_arithmetic_ops.py  test_broader_samples.py  test_complex_queries.py  test_invalid_samples.py  test_logical_ops.py  test_opl_format.py  test_role_filtering.py  test_set_debug.py  test_set_ops.py  test_templates.py
.github/workflows/: deploy.yml  quality.yml  test.yml
examples/: example_usage.py
src/overpass_ql_checker/: __init__.py  checker.py  cli.py
tests/: __init__.py  analyze_new_invalid_queries.py  categorize_error_patterns.py  debug_area.py  debug_count.py  find_remaining_invalid.py  test_all_invalid.py  test_area_ids.py  test_arithmetic_ops.py  test_broader_samples.py  test_changed_filter.py  test_cli.py  test_cli_coverage.py  test_complete.py  test_complex_queries.py  test_comprehensive_invalid_patterns.py  test_coverage_improvements.py  test_exact_failing.py  test_failing_parts.py  test_focused.py  test_for_loops.py  test_invalid_samples.py  test_logical_ops.py  test_make_statements.py  test_opl_format.py  test_overpass_checker.py  test_package.py  test_remaining.py  test_role_filtering.py  test_samples.py  test_set_debug.py  test_set_ops.py  test_templates.py  test_tokenizer_edge_cases.py  test_union_minus.py
