[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overpass-ql-checker"
version = "1.0.0"
authors = [
    {name = "Mark McLaren", email = "mark@example.com"},  # Replace with your actual email
]
description = "A comprehensive Python syntax checker for the Overpass Query Language (OverpassQL)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["overpass", "openstreetmap", "osm", "syntax", "checker", "validator", "overpass-ql"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/markmclaren/overpass-syntax-checker"
Repository = "https://github.com/markmclaren/overpass-syntax-checker"
Documentation = "https://github.com/markmclaren/overpass-syntax-checker#readme"
"Bug Reports" = "https://github.com/markmclaren/overpass-syntax-checker/issues"

[project.scripts]
overpass-ql-check = "overpass_ql_checker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true